--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.8.0",
     "@angular/cli": "^6.2.9",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
