--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
-    ]
+    ],
+    "module": "es2015",
+    "baseUrl": "./"
   }
 }
