--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -5,5 +5,11 @@
         "lib": ["es6", "dom"],
         "types": []
     },
-    "exclude": []
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ]
 }
