--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "module": "esnext",
+    "module": "es2020",
     "baseUrl": "./"
   }
 }
