--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^11.0.4",
+    "@angular/cdk": "^11.0.2",
     "@angular/common": "^11.0.4",
     "@angular/compiler": "^11.0.4",
     "@angular/core": "^11.0.4",
     "@angular/forms": "^11.0.4",
+    "@angular/material": "^11.0.2",
     "@angular/platform-browser": "^11.0.4",
     "@angular/platform-browser-dynamic": "^11.0.4",
     "@angular/router": "^11.0.4",
     "core-js": "^2.4.1",
     "rxjs": "^6.6.3",
+    "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.4",
