--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
+/dist
+/dist-server
 /tmp
 /out-tsc
 
@@ -29,8 +31,12 @@
 /coverage
 /libpeerconnection.log
 npm-debug.log
+yarn-error.log
 testem.log
 /typings
+*.orig
+.firebase
+version.ts
 
 # e2e
 /e2e/*.js
