--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/common": "^11.0.4",
     "@angular/compiler": "^11.0.4",
     "@angular/core": "^11.0.4",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "^11.0.4",
     "@angular/material": "^11.0.2",
     "@angular/platform-browser": "^11.0.4",
     "@angular/platform-browser-dynamic": "^11.0.4",
     "@angular/router": "^11.0.4",
     "core-js": "^2.4.1",
+    "firebase": "^8.1.2",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^2.0.0",
