--- a/package.json
+++ b/package.json
@@ -3,53 +3,135 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "postinstall": "npm run update-version && npm run ngcc",
+    "ngcc": "ngcc --properties es2015 browser module main --first-only --tsconfig ./src/tsconfig.app.json",
+    "update-version": "node scripts/update-version.js",
+    "get-version": "node scripts/get-version.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build:staging": "node --max_old-space-size=12000 ./node_modules/@angular/cli/bin/ng build --configuration=staging",
+    "build:production": "node --max_old-space-size=12000 ./node_modules/@angular/cli/bin/ng build --prod",
+    "build:production:stats": "node --max_old-space-size=12000 ./node_modules/@angular/cli/bin/ng build --prod --stats-json",
+    "hotfix:deploy:staging": "npm run update-version && npm run build:staging  && firebase deploy --only hosting,database --project staging && npm run get-version && firebase database:update /versionInfo version-output.json --confirm --project staging",
+    "hotfix:deploy:production": "npm run update-version && npm run build:production  --env production && firebase deploy --only hosting,database --project production && npm run get-version && firebase database:update /versionInfo version-output.json --confirm --project production && npm run upload-sourcemaps",
+    "server:firebase": "./node_modules/.bin/firebase-server -p 6543",
+    "test": "concurrently -r \"npm run server:firebase\" \"ng test ease-ngx --code-coverage\"",
+    "test:once": "concurrently -r -k -s \"first\" \"npm run server:firebase\" \"ng test ease-ngx --watch=false\"",
+    "test:once:ci": "concurrently -r -k -s \"first\" \"npm run server:firebase\" \"ng test ease-ngx --watch=false --browsers=ChromeHeadlessNoSandbox\"",
+    "prettier:app": "prettier --write \"src/{app,environments,assets,styles}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
+    "prettier:functions": "prettier --write \"functions/{src,utils}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
+    "prettier:all": "npm run prettier:app && npm run prettier:functions",
+    "prettier:check:app": "prettier --check --config ./.prettierrc \"src/{app,environments,assets,styles}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
+    "prettier:check:functions": "prettier --check --config ./.prettierrc \"functions/{src,utils}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
+    "prettier:check:all": "npm run prettier:check:app && npm run prettier:check:functions",
+    "prettier:staged": "pretty-quick --staged",
+    "lint": "node --max_old-space-size=12000 ./node_modules/@angular/cli/bin/ng lint",
+    "e2e": "ng e2e",
+    "functions:deploy:staging": "cd functions && npm run build && firebase deploy --only functions --project staging",
+    "functions:deploy:production": "cd functions && npm run build && firebase deploy --only functions --project production",
+    "functions:delete:staging": "cd functions && node functions-deleter.js --project staging",
+    "functions:delete:production": "cd functions && node functions-deleter.js --project production",
+    "upload-sourcemaps": "node scripts/upload-sourcemaps.js",
+    "serve": "node --max_old-space-size=12000 ./node_modules/@angular/cli/bin/ng serve --hmr",
+    "serve:basic": "node --max_old-space-size=12000 ./node_modules/@angular/cli/bin/ng serve"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier:staged",
+      "pre-push": "npm run lint"
+    }
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.4",
-    "@angular/cdk": "^11.0.2",
-    "@angular/common": "^11.0.4",
-    "@angular/compiler": "^11.0.4",
-    "@angular/core": "^11.0.4",
-    "@angular/fire": "^6.1.4",
-    "@angular/forms": "^11.0.4",
-    "@angular/material": "^11.0.2",
-    "@angular/platform-browser": "^11.0.4",
-    "@angular/platform-browser-dynamic": "^11.0.4",
-    "@angular/router": "^11.0.4",
-    "@schematics/angular": "^11.0.4",
-    "@types/angular": "^1.8.0",
-    "core-js": "^2.4.1",
-    "firebase": "^8.1.2",
-    "rxjs": "^6.6.3",
-    "rxjs-compat": "^6.0.0-rc.0",
+    "@angular/animations": "^11.0.0",
+    "@angular/cdk": "^11.0.0",
+    "@angular/common": "^11.0.0",
+    "@angular/compiler": "^11.0.0",
+    "@angular/core": "^11.0.0",
+    "@angular/fire": "^6.1.2",
+    "@angular/forms": "^11.0.0",
+    "@angular/google-maps": "^10.1.3",
+    "@angular/material": "^11.0.0",
+    "@angular/platform-browser": "^11.0.0",
+    "@angular/platform-browser-dynamic": "^11.0.0",
+    "@angular/router": "^11.0.0",
+    "@ngneat/until-destroy": "^8.0.3",
+    "comlink": "^4.0.3",
+    "core-js": "^2.5.7",
+    "firebase": "^8.0.2",
+    "lodash-es": "^4.17.11",
+    "normalize.css": "^4.2.0",
+    "qs": "^6.9.4",
+    "rrule": "2.2.9",
+    "rxjs": "6.5.4",
+    "rxjs-compat": "6.2.2",
+    "swiper": "3.3.1",
+    "textcomplete": "^0.18.0",
+    "tldjs": "^2.2.0",
     "tslib": "^2.0.0",
+    "webfontloader": "^1.6.27",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "^11.0.4",
-    "@angular/compiler-cli": "^11.0.4",
+    "@angular-devkit/architect": "^0.1100.1",
+    "@angular-devkit/build-angular": "~0.1100.1",
+    "@angular-devkit/core": "^11.0.1",
+    "@angular-devkit/schematics": "^11.0.1",
+    "@angular-eslint/builder": "0.8.0-beta.1",
+    "@angular-eslint/eslint-plugin": "0.8.0-beta.1",
+    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.1",
+    "@angular-eslint/schematics": "^0.8.0-beta.1",
+    "@angular-eslint/template-parser": "0.8.0-beta.1",
+    "@angular/cli": "^11.0.1",
+    "@angular/compiler-cli": "~11.0.0",
+    "@angular/language-service": "~11.0.0",
+    "@bugsnag/core": "^7.3.0",
+    "@googlemaps/google-maps-services-js": "^3.1.6",
+    "@schematics/angular": "^11.0.1",
+    "@types/algoliasearch": "^3.27.1",
+    "@types/filesize": "^3.6.0",
     "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/json2csv": "^4.5.1",
+    "@types/lodash-es": "^4.17.1",
+    "@types/markdown-it": "0.0.8",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.9",
     "@types/node": "^12.11.1",
+    "@types/qs": "^6.9.5",
+    "@types/sortablejs": "^1.7.2",
+    "@types/tldjs": "^2.3.0",
+    "@types/webfontloader": "^1.6.28",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "bugsnag-sourcemaps": "^1.3.0",
     "codelyzer": "^6.0.0",
+    "concurrently": "^3.5.1",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
+    "eslint-plugin-react": "latest",
+    "firebase-server": "^1.0.2",
+    "git-describe": "^4.0.3",
+    "husky": "^3.0.5",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
+    "karma": "~5.2.3",
+    "karma-beep-reporter": "^0.1.4",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "ng-packagr": "^11.0.2",
+    "prettier": "2.0.5",
+    "pretty-quick": "^2.0.1",
     "protractor": "~7.0.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "rimraf": "^2.6.1",
+    "ts-node": "~7.0.0",
+    "typescript": "~4.0.5",
+    "workbox-cli": "^3.6.3"
   }
 }
