--- a/scripts/tsconfig.scripts.json
+++ b/scripts/tsconfig.scripts.json
@@ -1,10 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "moduleResolution": "node",
+    "module": "commonjs",
     "outDir": "../out-tsc/app",
-    "types": [],
+    "types": ["node"],
     "skipLibCheck": true
-  },
-  "files": ["main.ts", "polyfills.ts"],
-  "include": ["src/**/*.d.ts", "**/*.lazy.*.ts"]
+  }
 }
